<resources>
    <string name="app_name" translatable="false">BlindTest</string>
    <string name="play">Jouer</string>
    <string name="settings">Paramètres</string>
    <string name="description">Par TanguX de 720d</string>
    <string name="language">Langue</string>
    <string name="french">Français</string>
    <string name="english">Anglais</string>
    <string name="question1">Quel est le titre de cette musique ?</string>
    <string name="about">A Propos</string>
    <string name="question" translatable="false">Question</string>
    <string name="difficulty">Choisissez une difficulté :</string>
    <string name="goodanswer">Bonne Réponse !</string>
    <string name="badanswer">Mauvaise réponse... C\'était :</string>
    <string name="nextquestion">Question suivante</string>
    <string name="endgame">Fin du Jeu</string>
    <string name="results">Voici vos resultats</string>
    <string name="correctResult">Bonne réponses :</string>
    <string name="wrongResult">Mauvaises réponses :</string>
    <string name="awesome">Bravo ! Vous avez fini avec brio !</string>
    <string name="thatisgood">Très bon résultats !</string>
    <string name="notbad">C\'est pas mal mais tu peux mieux faire</string>
    <string name="notgood">C\'est pas ouf ça</string>
    <string name="sobad">Ah ouais tu es nul en fait...</string>
    <string name="resultstitle">Résultats</string>
</resources>
